--- a/hello.html
+++ b/hello.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
-        <title>Hello Git</title>
+        <title>Hello Git 2</title>
     </head>
     <body>Hello GitHub
-        
+
     </body>
 </html>
