--- a/hello.html
+++ b/hello.html
@@ -3,7 +3,9 @@
     <head>
         <title>Hello Git 2</title>
     </head>
-    <body>Hello GitHub
+    <body>
+        <h1>Welcome to my web site</h1>
+        Hello GitHub
 
     </body>
 </html>
