add exclamation point

--- a/hello.html
+++ b/hello.html
@@ -4,7 +4,7 @@
         <title>Hello Git 2</title>
     </head>
     <body>
-        <h1>Welcome to my web site</h1>
+        <h1>Welcome to my web site!!</h1>
         <h2>We are Open</h2>
         Hello GitHub
 
